--- a/index.html
+++ b/index.html
@@ -1,3 +1,3 @@
 <html>
-  <h1> награда от российского правительства Зодиаку : 3A 39 30 3B 34 28 29 33 29 33 39 2F 35 32 26 2C 21 27 76 6E 72 3D </h1>
+  <h1> награда от российского правительства Зодиаку : 7A 79 70 7B 72 65 77 61 72 64 5F 36 32 32 38 7D </h1>
 </html>
